[package]
name = "event-observer"
description = "Implementation of observer pattern by rust."
version = "0.1.0"
authors = ["Kanichi Uegaki <kan1.921017@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kan1-u/event-observer"
keywords = ["observer", "event"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
